# microjson

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README_short.md  geojson_schema.json  index.html  init_highlight.js  microjson.d.ts  microjson_schema.json  microjsonschema.ts  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  pyproject.toml  requirements-nox.txt
.github/workflows/: ci.yml
about/: index.html
docs/: about.md  example.md  index.md  license.md  metadata_example.md  ome.md  ome_ngff.md  provenance.md  pydantic.md  roadmap.md  tiling.md  tiling_demo.md  usage.md  validation.md
example/: index.html
examples/: csv_to_microjson.py  df_to_microjson.py  example.py  load_validate.py
examples/json/: sample_geojson.json  sample_geometrycollection.json  sample_microjson.json
examples/tiles/: tiled_example.json
examples/tiles/tiled_example/0/0/: 0.json
examples/tiles/tiled_example/1/0/: 0.json  1.json
examples/tiles/tiled_example/1/1/: 0.json  1.json
examples/tiles/tiled_example/2/0/: 0.json  1.json  2.json  3.json
examples/tiles/tiled_example/2/1/: 0.json  1.json  2.json  3.json
examples/tiles/tiled_example/2/2/: 0.json  1.json  2.json  3.json
examples/tiles/tiled_example/2/3/: 0.json  1.json  2.json  3.json
geojson/: Feature.py  FeatureCollection.py  Geometry.py  GeometryCollection.py  LineString.py  MultiLineString.py  MultiPoint.py  MultiPolygon.py  Point.py  Polygon.py  __init__.py
inactive_tests/: test_microjson _auto.py  test_microjson_round.py
license/: index.html
metadata_example/: index.html
microjson/: __init__.py  automodel.py  geojson.py  model.py  roundtrip.py
notebooks/: Test.ipynb  cell_tile_0_40.parquet  example_with_redundant_metadata.parquet  index.html
notebooks/.ipynb_checkpoints/: Test-checkpoint.ipynb
ome/: index.html
protobuf/: json2vt.py
provenance/: index.html
pydantic/: index.html
roadmap/: index.html
search/: search_index.json
src/microjson/: __init__.py  automodel.py  fileutils.py  model.py  modelv1.py  polygen.py  protobuf.py  provenance.py  roundtrip.py  tile.py  tilecut.py  tilehandler.py  tilemodel.py  tilereader.py  tilewriter.py  utils.py
src/microjson/_legacy/: roundtrip.py
src/microjson/examples/: df_to_microjson.py  index.html  load_validate.py  readtiles.py  tiling.py  tiling_demo.ipynb
src/microjson/examples/tiles/: tiled_example.json
src/microjson/examples/tiles/tiled_example/0/0/: 0.json
src/microjson/examples/tiles/tiled_example/1/0/: 0.json  1.json
src/microjson/examples/tiles/tiled_example/1/1/: 0.json  1.json
src/microjson/examples/tiles/tiled_example/2/0/: 0.json  1.json  2.json  3.json
src/microjson/examples/tiles/tiled_example/2/1/: 0.json  1.json  2.json  3.json
src/microjson/examples/tiles/tiled_example/2/2/: 0.json  1.json  2.json  3.json
src/microjson/examples/tiles/tiled_example/2/3/: 0.json  1.json  2.json  3.json
src/microjson/microjson2vt/: LICENSE  __init__.py  clip.py  convert.py  feature.py  microjson2vt.py  simplify.py  tile.py  transform.py  utils.py  vt2geojson.py  wrap.py
src/microjson/vt2pbf/: encoder.py
src/microjson/vt2pbf/service/: feature.py  layer.py  tile.py
tests/: metadata-fulltest.json  test_geojson_schema.py  test_microjson _auto.py  test_microjson.py  test_original_schema.py  test_provenance.py  test_tilecut.py  test_tilejson.py  test_utils.py
tests/json/microjson/invalid/: boolean-ref.json  empty-coordinatesystem.json  no-axes.json  object-ref.json
tests/json/microjson/valid/: 3d.json  axesonly.json  feature_parent.json  fullexample.json  metadata-full.json  metadata-multilevel.json  multilevel-coordinatesystems.json  no-coordinatesystem.json  no-pixelsperunit.json  stitching-vector.json  stringref.json
tests/json/protobuf/: flatmetafulltest.json
tests/json/provenance/invalid/: artifact-nolinks.json  artifact-notype.json  link-noid.json  workflow-notype.json  workflowcollection_notype.json  workflowprovenance-notype.json
tests/json/provenance/valid/: artifact-noid.json  artifact.json  workflow.json  workflowcollection.json
tests/json/tilejson/invalid/: empty_multiscale.json  no_axes.json  no_tilejson.json  no_vector_layer.json
tests/json/tilejson/valid/: fileurl.json  microjson_tileset.json  minimal.json  osm.json
tests/tiles/: tiled_example.json
tests/tiles/tiled_example/0/0/: 0.json
tests/tiles/tiled_example/1/0/: 0.json  1.json
tests/tiles/tiled_example/1/1/: 0.json  1.json
tests/tiles/tiled_example/2/0/: 0.json  2.json
tests/tiles/tiled_example/2/1/: 0.json  1.json  2.json  3.json
tests/tiles/tiled_example/2/2/: 0.json  1.json  2.json  3.json
tests/tiles/tiled_example/2/3/: 0.json  1.json  2.json  3.json
tiling/: index.html
tiling_demo/: index.html
usage/: index.html
validation/: index.html
