[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microjson"
version = "0.1.10"
description = "MicroJSON is a library for validating, parsing, and manipulating MicroJSON data."
readme = "README_short.md"
authors = ["Bengt Ljungquist <bengt.ljungquist@nextonicsolutions.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json", "microscopy", "microjson"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = ">=3.9.15,<3.12"
bfio = {version = "2.3.2", extras = ["all"]}
scyjava = "^1.9.1"
typer = "^0.7.0"
scipy = ">=1.8,<1.9.2"
filepattern = "^2.0.1"
fastapi = "^0.103.1"
llvmlite = "^0.40.1"
vaex = "^4.17.0"
pydantic = "^2.3.0"
scikit-image = "0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
nox = "^2022.1.7"
datamodel-code-generator = "^0.21.4"
bumpver = "^2023.1125"
pre-commit = "^3.3.3"
black = "^23.3.0"
ruff = "^0.0.274"
mypy = "^1.4.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"


[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.bumpver]
current_version = "0.1.10"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/microjson/__init__.py" = ["{version}"]
