[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microjson"
version = "0.4.0"
description = "MicroJSON is a library for validating, parsing, and manipulating MicroJSON data."
readme = "README_short.md"
authors = ["Bengt Ljungquist <bengt.ljungquist@nextonicsolutions.com>"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json", "microscopy", "microjson"]
packages = [
    { include = "microjson", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[tool.poetry.dependencies]
python = ">=3.9.15,<3.12"
pydantic = "^2.3.0"
scikit-image = "0.20.0"
geojson-pydantic = "^1.2.0"
geojson2vt = "^1.0.1"
protobuf = "^5.29.3"
geojson = "^3.1.0"
shapely = "^2.0.6"
mapbox-vector-tile = "^2.1.0"



[tool.poetry.dependencies.bfio]     
version = "2.4.5"
extras = ["all"]   
optional = true

[tool.poetry.dependencies.scipy]     
version = ">=1.8"
optional = true

[tool.poetry.dependencies.filepattern] 
version = "^2.0.1"
optional = true

[tool.poetry.dependencies.vaex]      
version = "^4.17.0"
optional = true

[tool.poetry.extras]
all = [
    "bfio", 
    "scipy", 
    "filepattern", 
    "vaex"
]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
nox = "^2022.1.7"
datamodel-code-generator = "^0.21.4"
bumpver = "^2023.1125"
pre-commit = "^3.3.3"
black = "^23.3.0"
ruff = "^0.0.274"
mypy = "^1.4.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocs-material = "^9.5.49"
mkdocstrings-python = "^1.13.0"


[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["src/"]

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/microjson/__init__.py" = ["{version}"]
".bumpversion.cfg" = ["current_version = {version}"]
